<resources>
    <string name="app_name">        EA6News</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="general">General</string>
    <string name="tech">Tech</string>
    <string name="financial">Financials</string>
    <string name="sports">Sports</string>
    <string name="health">Health</string>
    <string name="music">Music</string>

</resources>