<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpage"
        android:layout_width="0dp"
        android:layout_height="550dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="550dp"
        android:background="#5BD1D1D0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gifImageView"
        app:tabIndicatorColor="#000000"
        app:tabMode="scrollable"
        app:tabTextAppearance="@style/TextAppearance.AppCompat.Medium"
        app:tabTextColor="@color/black">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/fox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/general" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tech"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tech" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/financial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/financial" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/sports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sports" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/art"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/international"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music" />

    </com.google.android.material.tabs.TabLayout>

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#000000"
        android:src="@drawable/newlogo"
        app:layout_constraintBottom_toTopOf="@+id/tab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

</androidx.constraintlayout.widget.ConstraintLayout>